Closed Bug 278973 Opened 21 years ago Closed 21 years ago

Let nsIContextControl use nsIDOMNode instead of nsIDOMElement

Categories

(Core Graveyard :: XForms, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: allan, Assigned: allan)

References

()

Details

Attachments

(1 file, 1 obsolete file)

There's no reason for nsIContextControl to use nsIDOMElement as the context node. The node a control is bound to and also uses as context is just a nsIDOMNode.
Attached patch Patch v1 (obsolete) — — Splinter Review
Uses nsIDOMNode instead, and also solves some sloppy coding from me: nsXFormsRepeatElement and nsXFormsContextContainer was not using nsXFormsControlStub properly. It's built for the branch, and depends on at least bug 265467.
Attachment #171741 - Flags: review?(smaug)
Status: NEW → ASSIGNED
Blocks: 278962
Comment on attachment 171741 [details] [diff] [review] Patch v1 Looks ok.
Attachment #171741 - Flags: review?(smaug) → review+
Attachment #171741 - Flags: superreview?(darin)
Attachment #171741 - Flags: superreview?(darin)
Updated to trunk
Attachment #171741 - Attachment is obsolete: true
Attachment #171869 - Flags: superreview?(darin)
Comment on attachment 171869 [details] [diff] [review] Patch v1 for trunk sr=darin
Attachment #171869 - Flags: superreview?(darin) → superreview+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: