Let nsIContextControl use nsIDOMNode instead of nsIDOMElement, bug 278973, r=smaug, sr=darin